unpackaged/objects/Account_Plan__c.object
<CustomObject>
  <description>Account planning is the process of mapping out important details about your customer, including information about their decision-making process, the companies you're competing with to close them, and the overall strategy to win them over, retain and grow them.

An Account plan is yearly-based as it's typically something you create at the beginning of the year and you keep track of your progress throughout the months.

This account plan is based on the "OGSM" strategic planning methodology: an OGSM is a written and easily communicated statement of an organization’s Objective, Goals, Strategies and Measures. OGSM brings alignment, transparency of priorities and metrics that define success.</description>
  <fields>
    <fullName>AccountPlanOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Plans</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Account_Address__c</fullName>
    <formula>If (NOT(ISBLANK(Account__r.ShippingAddress)) , 
Account__r.ShippingStreet &amp;" "&amp; Account__r.ShippingCity &amp;" "&amp; Account__r.ShippingState &amp;" "&amp; Account__r.ShippingPostalCode,
Account__r.BillingStreet &amp;" "&amp; Account__r.BillingCity &amp;" "&amp; Account__r.BillingState &amp;" "&amp; Account__r.BillingPostalCode
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_OneSF_ID__c</fullName>
    <formula>Account__r.OneSF_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account OneSF ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Plan_Description__c</fullName>
    <label>Account Plan Highlights</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Account_Plan_Status__c</fullName>
    <label>Account Plan Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Retired</fullName>
        </value>
        <value>
          <fullName>Cancelled</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Account_Segment__c</fullName>
    <formula>TEXT(Account__r.Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Acquisitions__c</fullName>
    <inlineHelpText>How many acquisitions did your customer acquire this year?</inlineHelpText>
    <label>Acquisitions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>AddSurgicalOperatory__c</fullName>
    <label>Add Surgical Operatory</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>AddingAssociates__c</fullName>
    <label>Adding Associate(s)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>BusinessUnits__c</fullName>
    <description>Select the business units that apply to this account in order to mass generate financial records per Business Unit</description>
    <inlineHelpText>Select the business units that apply to this account in order to mass generate financial records per Business Unit</inlineHelpText>
    <label>Business Unit(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Lab (Prosthetics)</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CBCT3D__c</fullName>
    <label>CBCT / 3D</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ChairDeliverySystemTreatmentCent__c</fullName>
    <label>Chair/Delivery System/Treatment Center</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Denovo__c</fullName>
    <inlineHelpText>How many new acquisitions is your customer predicting to acquire this year?</inlineHelpText>
    <label>Denovo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>DigitalScanner__c</fullName>
    <label>Digital Scanner</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>EndodonticsNotes__c</fullName>
    <label>Endodontics Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>FollowUpNotes__c</fullName>
    <inlineHelpText>Enter your Account Plan Notes that you want to track (e.g. Quarterly Business Review, ...)</inlineHelpText>
    <label>Follow-Up Notes</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>HygieneOperatory__c</fullName>
    <label>Hygiene Operatory</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ImplantsNotes__c</fullName>
    <label>Implants Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>KeyDecisions__c</fullName>
    <inlineHelpText>What are the decisions that have been made?</inlineHelpText>
    <label>Key Decisions</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>MillOven__c</fullName>
    <label>Mill / Oven</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Offices__c</fullName>
    <inlineHelpText>Automatically calculated upon creation of the Account Plan (Based on the # of Accounts related to this account in the hierarchy)</inlineHelpText>
    <label>Offices</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OpeningNewPractice__c</fullName>
    <label>Opening New Practice(s)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>OrthodonticsNotes__c</fullName>
    <label>Orthodontics Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Pan__c</fullName>
    <label>Pan</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>PracticeOpeningExpansionProgram__c</fullName>
    <description>TFUS-000003331</description>
    <label>Practice Opening or Expansion Program</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Practice Opening</fullName>
        </value>
        <value>
          <fullName>Practice Expansion</fullName>
        </value>
        <value>
          <fullName>Not Applicable</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>PreventiveNotes__c</fullName>
    <description>TFUS-000003175</description>
    <label>Preventive Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>PurchasingExistingPractice__c</fullName>
    <label>Purchasing Existing Practice(s)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Relocating__c</fullName>
    <label>Relocating</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No Plans</fullName>
        </value>
        <value>
          <fullName>Yes - 0-12 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 12-24 Months</fullName>
        </value>
        <value>
          <fullName>Yes - 24+ Months</fullName>
        </value>
        <value>
          <fullName>Yes - Unknown Timeline</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>RestorativeNotes__c</fullName>
    <description>TFUS-000003175</description>
    <label>Restorative Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>TotalAnnualGrowthTotalQuota__c</fullName>
    <formula>TotalLatestEstimate__c -  TotalAnnualSalesQuota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Growth vs Total Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>TotalAnnualSalesQuota__c</fullName>
    <label>Total Annual Sales Quota</label>
    <summarizedField>AccountPlanEstimates__c.AnnualSalesQuota__c</summarizedField>
    <summaryForeignKey>AccountPlanEstimates__c.AccountPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>TotalDSMarketShareAverage__c</fullName>
    <formula>TotalDSMarketShare__c /  ofQuotaLines__c</formula>
    <label>Total DS Market Share Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>TotalDSMarketShare__c</fullName>
    <label>Total DS Market Share %</label>
    <summarizedField>AccountPlanEstimates__c.DSMarketShare__c</summarizedField>
    <summaryForeignKey>AccountPlanEstimates__c.AccountPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>TotalLatestEstimate__c</fullName>
    <label>Total Latest Estimate (LE)</label>
    <summarizedField>AccountPlanEstimates__c.LatestEstimate__c</summarizedField>
    <summaryForeignKey>AccountPlanEstimates__c.AccountPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>TotalQ1SalesQuota__c</fullName>
    <label>Total Q1 Sales Quota</label>
    <summarizedField>AccountPlanEstimates__c.Q1SalesQuota__c</summarizedField>
    <summaryForeignKey>AccountPlanEstimates__c.AccountPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>TotalQ2SalesQuota__c</fullName>
    <label>Total Q2 Sales Quota</label>
    <summarizedField>AccountPlanEstimates__c.Q2SalesQuota__c</summarizedField>
    <summaryForeignKey>AccountPlanEstimates__c.AccountPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>TotalQ3SalesQuota__c</fullName>
    <label>Total Q3 Sales Quota</label>
    <summarizedField>AccountPlanEstimates__c.Q3SalesQuota__c</summarizedField>
    <summaryForeignKey>AccountPlanEstimates__c.AccountPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Year__c</fullName>
    <defaultValue>TEXT(YEAR(Today()))</defaultValue>
    <label>Calendar Year</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>2019</fullName>
        </value>
        <value>
          <fullName>2020</fullName>
        </value>
        <value>
          <fullName>2021</fullName>
        </value>
        <value>
          <fullName>2022</fullName>
        </value>
        <value>
          <fullName>2023</fullName>
        </value>
        <value>
          <fullName>2024</fullName>
        </value>
        <value>
          <fullName>2025</fullName>
        </value>
        <value>
          <fullName>TEXT(Year(22 November 2021))</fullName>
          <isActive>false</isActive>
          <label>TEXT(Year(22 November 2021))</label>
        </value>
        <value>
          <fullName>Year(22 November 2021)</fullName>
          <isActive>false</isActive>
          <label>Year(22 November 2021)</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ofQuotaLines__c</fullName>
    <label># of Quota Lines</label>
    <summaryForeignKey>AccountPlanEstimates__c.AccountPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <label>Account Plan</label>
  <listViews>
    <fullName>All_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>AccountPlanOwner__c</columns>
    <columns>Offices__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Plans</label>
  </listViews>
  <listViews>
    <fullName>NA_DSO_Account_Plans</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>AccountPlanOwner__c</field>
      <operation>contains</operation>
      <value>Nikki</value>
    </filters>
    <filters>
      <field>AccountPlanOwner__c</field>
      <operation>contains</operation>
      <value>hideyoshi</value>
    </filters>
    <filters>
      <field>AccountPlanOwner__c</field>
      <operation>contains</operation>
      <value>Hoover</value>
    </filters>
    <label>NA DSO Account Plans</label>
  </listViews>
  <nameField>
    <label>Account Plan #</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Account Plans</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>